# meetcoach

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
scripts/: audio_level.py  debug_stt.py  headless_capture.py  install-slash-commands.sh  probe_dg.py  probe_flux.py  register-mcp.py
share/skills/meeting/: SKILL.md
share/slash-commands/: meeting.md
src/meetcoach/: __main__.py  audio.py  capabilities.py  cli.py  coach.py  config.py  mcp_server.py  providers.py  stt.py  tui.py
