[project]
name = "meetcoach"
version = "0.1.0"
description = "Real-time meeting transcription with a Claude coach watching live"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Indranand Jha" }]
dependencies = [
    "click>=8.1",
    "rich>=13.9",
    "textual>=0.85",
    "sounddevice>=0.5",
    "numpy>=2.1",
    "python-dotenv>=1.0",
    "websockets>=15",
    "mcp>=1.20",
]

[project.optional-dependencies]
whisper = ["faster-whisper>=1.1", "webrtcvad>=2.0.10"]

[project.scripts]
meetcoach = "meetcoach.cli:cli"
meetcoach-mcp = "meetcoach.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meetcoach"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[dependency-groups]
dev = ["ruff>=0.8", "pytest>=8"]
